--- a/2go.html
+++ b/2go.html
@@ -86,35 +86,33 @@ a:link, a:visited {width: 225px;}
 
 
 
-<a href="./" title="HOME PAGE">  &nbsp;
-<span class="dot green"></span><spanclass="dotblue"></span>
-HOME PAGE
-<span class="dot"></span><spanclass="dot skyblue"></span></a>
-  <a href="https://www.youtube.com/" target="_blank" title="#" title="YOUTUBE"><span class="dot"></span> YOUTUBE </a>
+<a href="./" title="HOME PAGE">  &nbsp;<span class="dot green"></span><spanclass="dotblue"></span>HOME PAGE<span class="dot"></span><spanclass="dot skyblue"></span></a>
+<a href="https://www.youtube.com/" target="_blank" title="#" title="YOUTUBE"><span class="dot"></span> YOUTUBE </a>
+<a href="https://web.whatsapp.com/" target="_blank" title="#"><span class="dot white"></span> WHATSAPP </a>
   
-  <a href="https://chat.openai.com/auth/login" target="_blank" title="#"><span class="dot black"></span> CHATGPT </a>
-  <a href="https://web.whatsapp.com/" target="_blank" title="#"><span class="dot white"></span> WHATSAPP </a>
   <a href="https://www.jio.com/selfcare/login/" target="_blank" title="#"><span class="dot dot1"></span> JIO LOGIN </a>
-
   <a href="https://www.myvi.in/account/login/" target="_blank" title="#"><span class="dot dot2"></span> MYVI IDEA</a>
-  <a href="https://sk4.fun"  title="#"><span class="dot dot3"></span> SK4FUN </a>
+    <a href="https://chat.openai.com/auth/login" target="_blank" title="#"><span class="dot black"></span> CHATGPT </a>
+  
+  <a href="https://sk4.fun"  title="#"><span class="dot dot3"></span> SK4FUN PAGE </a>  
   <a href="https://imp.sk4.fun"><span class="dot dot6" title="#"></span> IMP SK4FUN </a>
-
-  <a href="https://go.sk4.fun/"><span class="dot black" title="#"></span>LINKS SK4FUN </a>
-  <a href="https://sk24.in/snd/siteswith.php" title="#"><span class="dot purple"></span> SND WEBSITES </a>
+  <a href="https://go.sk4.fun/"><span class="dot black" title="#"></span> LINKS SK4FUN </a>
+  
+ 
   <a href="https://sk24.in/db71/gbook/phpfile_fullview.php" title="#"><span class="dot green"></span> POST MESSAGES</a>
-
-  <a href="https://sk24.in/post/display.php"><span class="dot skyblue" title="#"></span> IMAGE POST </a>
+  <a href="https://sk24.in/post/display.php"><span class="dot skyblue" title="#"></span> IMAGE POST </a>  
   <a href="https://sk24.in/db71/all/demoupdate/display.php" target="_blank" title="#"><span class="dot dot5"></span> DEMO PAGE</a>
+  
   <a href="https://sk24.in/db71/logintype.php" title="#"><span class="dot dot6"></span> LOG PAGE </a>
-
-  <a href="https://sk24.in/db71/goto/target2.php"><span class="dot dot6"></span> TARGET LINKS</a>
-  <a href="https://sk24.in/db71/skd/"><span class="dot"></span> SKD LINKS </a>
+  <a href="https://sk24.in/db71/goto/target2.php"><span class="dot dot6"></span> TARGET LINKS</a>  
   <a href="https://sk24.in/db71/goto/goto_login.html"><span class="dot green"></span> LOGIN LINKS </a>
-
+  
   <a href="https://sk24.in/goto/gbook1/"><span class="dot blue"></span> GUEST BOOK 1 </a>
-  <a href="https://sk24.in/db71/all/"><span class="dot black"></span> PHP ALL PAGES </a>
+    <a href="https://sk24.in/db71/all/"><span class="dot black"></span> PHP ALL PAGES </a>  
   <a href="https://sk24.in/post/test2/gallery.php"><span class="dot dot5"></span> IMG UPLOAD </a>
+
+  <!-- <a href="https://sk24.in/db71/skd/"><span class="dot"></span> SKD LINKS </a> -->
+<!-- <a href="https://sk24.in/snd/siteswith.php" title="#"><span class="dot purple"></span> SND WEBSITES </a> -->
 
 <div style="max-width:200px; margin:1px auto; height:29px; padding:10px; font-size:26px;  background:black; border-radius:7px; opacity:0.9;">
 <center>
