--- a/2go.html
+++ b/2go.html
@@ -1,11 +1,6 @@
-
 <!DOCTYPE html>
-
 <html lang="en">
-
-<html>
-
-<head>
+<html><head>
 <title>LINKS PAGE</title>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,12 +18,10 @@ linear-gradient(115deg, #0057FF 0%, #020077 100%), conic-gradient(from 110deg at
 background-repeat: no-repeat;
 background-attachment: fixed;
 
-
 max-width:800px;
 margin:1px auto;
 color:#fff;
 }
-
 
 a:link, a:visited {
   background-color: #0066FF;
@@ -48,6 +41,7 @@ a:link, a:visited {
 }
 
 a:hover, a:active {background-color: red; color: white; background-image: linear-gradient(to right, #000066, #FF3300);}
+.active {background-color: red; color: white; background-image: linear-gradient(to right, #000066, #FF3300);}
 
 .dot {height: 14px; width: 14px; background-color: red; border-radius: 50%; display: inline-block; border:2px solid white;}
 .white {background-color: #ffffff; border:1px solid black;}
@@ -120,7 +114,7 @@ a:link, a:visited {width: 225px;}
 </center>
 </div>
 
-<a href="2go.html"> <span class="dot dot1"></span> 2go Home ////</a>
+<a href="2go.html" class="active"> <span class="dot dot1"></span> 2go Home ////</a>
 <a href="30colors.html"><span class="dot dot2"></span> 30 Colors ////</a>
 <a href="links.html"> <span class="dot dot3"></span> The Links ////</a>
 
