--- a/2go.html
+++ b/2go.html
@@ -108,7 +108,7 @@ a:link, a:visited {width: 225px;}
   <!-- <a href="https://sk24.in/db71/skd/"><span class="dot"></span> SKD LINKS </a> -->
 <!-- <a href="https://sk24.in/snd/siteswith.php" title="#"><span class="dot purple"></span> SND WEBSITES </a> -->
 
-<div class="active" style="max-width:200px; margin:1px auto; height:29px; padding:10px; font-size:26px;  border-radius:7px;">
+<div style="max-width:200px; background:rgba(255,255,255,0.7); margin:1px auto; height:29px; padding:10px; font-size:26px; color:white; border-radius:7px;">
 <center>
 <b> GOTO LINKS</b>
 </center>
