--- a/2go.html
+++ b/2go.html
@@ -108,13 +108,13 @@ a:link, a:visited {width: 225px;}
   <!-- <a href="https://sk24.in/db71/skd/"><span class="dot"></span> SKD LINKS </a> -->
 <!-- <a href="https://sk24.in/snd/siteswith.php" title="#"><span class="dot purple"></span> SND WEBSITES </a> -->
 
-<div style="max-width:200px; background:rgba(255,255,255,0.7); margin:1px auto; height:29px; padding:10px; font-size:26px; color:white; border-radius:7px;">
+<div style="max-width:200px; background:rgba(255,255,255,0.7); margin:1px auto; height:29px; padding:10px; font-size:26px; color:#000; border-radius:7px;">
 <center>
 <b> GOTO LINKS</b>
 </center>
 </div>
 
-<a href="2go.html" class="active"> <span class="dot dot1"></span> 2go Home ////</a>
+<a href="2go.html"> <span class="dot dot1"></span> 2go Home ////</a>
 <a href="30colors.html"><span class="dot dot2"></span> 30 Colors ////</a>
 <a href="links.html"> <span class="dot dot3"></span> The Links ////</a>
 
