--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <html><head><title>LINKS</title>
 <meta name='keywords' CONTENT='pune, india, graphic, designing, arts, illustrations, website'>
 <meta name='description' CONTENT='sd2 online The page is graphic and web developing page'>
-<link href="sd1.png" rel="icon">
-<link href="sd1.png" rel="apple-touch-icon">
+<link href="img/sd1.png" rel="icon">
+<link href="img/sd1.png" rel="apple-touch-icon">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <frameset border="0" rows="100%,*" cols="100%" frameborder="no">
