--- a/2go.html
+++ b/2go.html
@@ -46,29 +46,19 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <body class="bg9">
 <br>
 <center>
-<a href="https://github.com/sndh7" style="background: linear-gradient(to left, yellow, orange,green, red, #6600cc, #000066, #000); font-size:24px; border-radius:6px; padding:4px 9px;">GitHub sndh7 Home Page </a> <br><br>
-
+<a href="https://github.com/sndh7" targe="_blank" style="background: linear-gradient(to left, yellow, orange,green, red, #6600cc, #000066, #000); font-size:24px; border-radius:6px; padding:4px 9px;">GitHub sndh7 Home Page </a> <br><br>
 <a href="https://sndh7.github.io/sk24/" class="link2">sndh7.github.io/sk24/</a> <br><br>
-
 <a href="https://sndh7.github.io/sk24/" class="link2">sk24</a>&nbsp;
-
 <a href="https://sndh7.github.io/sk24tech/" class="link2">sk24tech</a>&nbsp;
-
 <a href="https://sndh7.github.io/go/" class="link2">go</a><br><br>
-
 <a href="https://sndh7.github.io/go/" class="link5">sndh7.github.io/go/</a> <br><br>
 <a href="3go.html" class="link5"> 3go</a>&nbsp; 
 <a href="30colors.html" class="link5">30colors</a>&nbsp; 
 <a href="links.html" class="link5">Links</a>
-
 <br>
-
 <center><h2><b> https://github.com/sndh7 </b></h2></center>
-
-
-
 <br><br>
-<a href="https://github.com/sndh7"><img src="sd2.png" width="100px"></a>
+<a href="https://github.com/sndh7" targe="_blank"><img src="sd2.png" width="100px"></a>
 <br><br><br>
 <div style="background:black; padding:6px; width:340px; border-radius:8px;">
 <img src="img/sd1.png" width="75"> <img src="img/sd3.png" width="75"> <img src="img/sd4.png" width="75"> <img src="img/sd5.png" width="75">
