--- a/links.html
+++ b/links.html
@@ -36,7 +36,7 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 
 <body class="bgfill">
 
-<a href="index.php"> <img src="https://sk24.in/post/icons/post.png" width="25" align="left" valign="top"> &nbsp; GOTO HOME PAGE </a> 
+<!-- <a href="index.php"> <img src="https://sk24.in/post/icons/post.png" width="25" align="left" valign="top"> &nbsp; GOTO HOME PAGE </a> 
 <a href='https://ladakibahin.maharashtra.gov.in/sign-in' target='_blank'> Majhi Ladki Bahin Jojana</a> 
 <a href='https://sk24.in/db71/skd/' target='_blank'> GOTO SKD LINKS </a><br>
 
@@ -56,7 +56,7 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <a href='https://www.irctc.co.in/nget/train-search' target='_blank'> IRCTC TRAIN SEARCH </a>
 <a href='https://imp.sk4.fun/' target='_blank'> IMP_SK4FUN WEB </a>
 <a href='https://sk24.in/post/test/gallery.php' target='_blank'> IMAGE_GALLERY_2 </a>
-<a href='https://sk24.in/db71/zzz/2/display2.php' target='_blank'> TextOnly_Inputtype </a>
+<a href='https://sk24.in/db71/zzz/2/display2.php' target='_blank'> TextOnly_Inputtype </a> -->
 <a href="/db71/goto/index.php" 5"> Goto Links 1st Page </a>
 <a href="/db71/goto/index2.php" 5"> Goto Links 2nd Page  </a>
 <a href="/db71/AllSitesInfo/index.php" 5"> Goto Links 3rd Page  </a>
