--- a/links.html
+++ b/links.html
@@ -56,16 +56,13 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <a href='https://www.irctc.co.in/nget/train-search' target='_blank'> IRCTC TRAIN SEARCH </a>
 <a href='https://imp.sk4.fun/' target='_blank'> IMP_SK4FUN WEB </a>
 <a href='https://sk24.in/post/test/gallery.php' target='_blank'> IMAGE_GALLERY_2 </a>
-<a href='https://sk24.in/db71/zzz/2/display2.php' target='_blank'> TextOnly_Inputtype </a> -->
+<a href='https://sk24.in/db71/zzz/2/display2.php' target='_blank'> TextOnly_Inputtype </a>
 <a href="/db71/goto/index.php" 5"> Goto Links 1st Page </a>
 <a href="/db71/goto/index2.php" 5"> Goto Links 2nd Page  </a>
-<a href="/db71/AllSitesInfo/index.php" 5"> Goto Links 3rd Page  </a>
+<a href="/db71/AllSitesInfo/index.php" 5"> Goto Links 3rd Page  </a>  -->
 
 <a href="2go.html">2go Home</a><a href="30colors.html">30 Colors </a><a href="links.html">The Links</a>
-
-
 <br><br>
-
 <center>
 <img class="sdspin" src="https://sk24.in/db71/goto/home/imp_img/05_Flower.png" 
 style="background:conic-gradient(red,orange, purple, blue, green, red,orange, purple, blue, green, red);  z-index: 9999; 
