--- a/2go.html
+++ b/2go.html
@@ -61,9 +61,33 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <a href="https://github.com/sndh7" target="_blank"><img src="sd2.png" width="100px"></a>
 <br><br><br>
 <div style="background:black; padding:6px; width:340px; border-radius:8px;">
-<img src="img/sd1.png" width="75"> <img src="img/sd3.png" width="75"> <img src="img/sd4.png" width="75"> <img src="img/sd5.png" width="75">
-<img src="img/sd6.png" width="75"> <img src="img/star.png" width="75"> <img src="img/download.png" width="75"> <img src="img/msg.png" width="75">
-<img src="img/study.png" width="75"> <img src="img/pencil.png" width="75"> <img src="sd2.png" width="75">
+<a href="img/sd1.png">IMAGE_01</a> / 
+<a href="img/sd2.png">IMAGE_02</a> / 
+<a href="img/sd3.png">IMAGE_03</a> / 
+<a href="img/sd4.png">IMAGE_04</a> / 
+<a href="img/sd5.png">IMAGE_05</a> / 
+<a href="img/sd6.png">IMAGE_06</a> / 
+
+<a href="img/download.png">IMAGE_07</a> / 
+<a href="img/star.png">IMAGE_08</a> / 
+<a href="img/msg.png">IMAGE_09</a> / 
+<a href="img/study.png">IMAGE_10</a> / 
+<a href="img/pencil.png">IMAGE_11</a> / 
+<a href="img/images.html">Goto Page</a> / 
+
+<!-- 
+<img src="img/sd1.png" width="75"> 
+<img src="img/sd3.png" width="75"> 
+<img src="img/sd4.png" width="75"> 
+<img src="img/sd5.png" width="75">
+<img src="img/sd6.png" width="75"> 
+<img src="img/star.png" width="75"> 
+<img src="img/download.png" width="75"> 
+<img src="img/msg.png" width="75">
+<img src="img/study.png" width="75"> 
+<img src="img/pencil.png" width="75"> 
+<img src="sd2.png" width="75">
+-->
 </center>
 <br><br>
 
