--- a/2go.html
+++ b/2go.html
@@ -73,6 +73,8 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <a href="img/msg.png">IMAGE_09</a> / 
 <a href="img/study.png">IMAGE_10</a> / 
 <a href="img/pencil.png">IMAGE_11</a> / 
+<a href="img/sk24.png">IMAGE_12</a> / 
+<a href="img/sk24a.png">IMAGE_13</a> / 
 <a href="img/images.html">Goto Page</a> / 
 
 <!-- 
@@ -87,6 +89,9 @@ animation-iteration-count: infinite; animation-timing-function: linear;}
 <img src="img/study.png" width="75"> 
 <img src="img/pencil.png" width="75"> 
 <img src="sd2.png" width="75">
+<img src="sk24.png" width="75">
+<img src="sk24a.png" width="75">
+
 -->
 </center>
 <br><br>
