--- a/img/images.html
+++ b/img/images.html
@@ -13,6 +13,8 @@ border-radius:8px; margin:1px auto;">
 <a href="msg.png"><img src="msg.png" width="112"></a> 
 <a href="study.png"><img src="study.png" width="112"></a> 
 <a href="pencil.png"><img src="pencil.png" width="112"></a> 
+<a href="sk24.png"><img src="sk24.png" width="112"></a> 
+<a href="sk24a.png"><img src="sk24a.png" width="112"></a> 
 
 </div>
 </center> 
