--- a/img/images.html
+++ b/img/images.html
@@ -15,6 +15,7 @@ border-radius:8px; margin:1px auto;">
 <a href="pencil.png"><img src="pencil.png" width="112"></a> 
 <a href="sk24.png"><img src="sk24.png" width="112"></a> 
 <a href="sk24a.png"><img src="sk24a.png" width="112"></a> 
-
 </div>
+<br>
+<a href="sk24in_01.png"> <img src="sk24in_01.png" width="350"><a>
 </center> 
