--- a/img/images.html
+++ b/img/images.html
@@ -1,4 +1,4 @@
-</center> 
+<center> 
 <div style="background:black; padding:6px; width:350px; 
 border-radius:8px; margin:1px auto;">
 
@@ -17,5 +17,17 @@ border-radius:8px; margin:1px auto;">
 <a href="sk24a.png"><img src="sk24a.png" width="112"></a> 
 </div>
 <br>
-<a href="sk24in_01.png"> <img src="sk24in_01.png" width="350"><a>
+<a href="sk24in_01.png"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_01.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_02.png"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_02.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_03.png"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_03.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_04.png"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_04.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+  
+<a href="sk24in_05.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_06.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_07.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+
 </center> 
