--- a/img/images.html
+++ b/img/images.html
@@ -18,16 +18,16 @@ border-radius:8px; margin:1px auto;">
 </div>
 <br>
 <a href="sk24in_01.png"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_01.jpg"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_02.png"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_02.jpg"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_03.png"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_03.jpg"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_04.png"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_04.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_01.jpg"> <img src="sk24in_01.jpg" width="350"><a><br>
+<a href="sk24in_02.png"> <img src="sk24in_02.png" width="350"><a><br>
+<a href="sk24in_02.jpg"> <img src="sk24in_02.jpg" width="350"><a><br>
+<a href="sk24in_03.png"> <img src="sk24in_03.png" width="350"><a><br>
+<a href="sk24in_03.jpg"> <img src="sk24in_03.jpg" width="350"><a><br>
+<a href="sk24in_04.png"> <img src="sk24in_04.png" width="350"><a><br>
+<a href="sk24in_04.jpg"> <img src="sk24in_04.jpg" width="350"><a><br>
   
-<a href="sk24in_05.jpg"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_06.jpg"> <img src="sk24in_01.png" width="350"><a><br>
-<a href="sk24in_07.jpg"> <img src="sk24in_01.png" width="350"><a><br>
+<a href="sk24in_05.jpg"> <img src="sk24in_05.png" width="350"><a><br>
+<a href="sk24in_06.jpg"> <img src="sk24in_06.png" width="350"><a><br>
+<a href="sk24in_07.jpg"> <img src="sk24in_07.png" width="350"><a><br>
 
 </center> 
