--- a/img/images.html
+++ b/img/images.html
@@ -26,8 +26,8 @@ border-radius:8px; margin:1px auto;">
 <a href="sk24in_04.png"> <img src="sk24in_04.png" width="350"><a><br>
 <a href="sk24in_04.jpg"> <img src="sk24in_04.jpg" width="350"><a><br>
   
-<a href="sk24in_05.jpg"> <img src="sk24in_05.png" width="350"><a><br>
-<a href="sk24in_06.jpg"> <img src="sk24in_06.png" width="350"><a><br>
-<a href="sk24in_07.jpg"> <img src="sk24in_07.png" width="350"><a><br>
+<a href="sk24in_05.jpg"> <img src="sk24in_05.jpg" width="350"><a><br>
+<a href="sk24in_06.jpg"> <img src="sk24in_06.jpg" width="350"><a><br>
+<a href="sk24in_07.jpg"> <img src="sk24in_07.jpg" width="350"><a><br>
 
 </center> 
